tests/92_lexer_error.scj
// Test 92: Lexer error - unexpected character
// Test: error handling for invalid characters
let x = 10 @ 5
// ExpectError: Unexpected character '@'
